Locale update; GraphQL tracing support; conversations optimization

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -5,6 +5,9 @@
     "admin-menu.manage-banks": "📝 Manage content banks",
     "bank-list.create-new-bank": "Create new bank",
     "bank-list.empty-hint": "⚠️ No banks found",
+    "bank-list.hint": "Banks (data-packs):\n🔸 Page: :page \/ :max_page\nType key word or ID to search the bank.",
+    "bank-list.not-found": "Bank not found.",
+    "bank-list.selected-conversation": "Selected\/found bank #:id (:TITLE).",
     "chain.generic-word": "generic",
     "chaining-bank.edit-chains": "Edit chains",
     "chaining-bank.hint": "chaining-bank.hint",
@@ -49,13 +52,20 @@
     "create-when-meme-conversation.step-3": "[Step 3\/3]\nSend bottom text of a meme.",
     "demotivational-poster-meme.title": "Demotivational meme",
     "form.sending-error": "⚠️ Sending form error: some fields are filled incorrectly.\n\nDetails:\n:details",
+    "generate-meme-conversation.add-bank": "Add data-pack",
     "generate-meme-conversation.ask-meme-type": "Choose the meme to be generated:",
+    "generate-meme-conversation.confirm-removal": "Remove ':title' from the list?",
+    "generate-meme-conversation.demotivational-poster-meme.done": "Done.",
     "generate-meme-conversation.generating-error": "Error generating meme =(",
+    "generate-meme-conversation.selecting-banks": "Image and text banks for generating memes:\n🔸 Page: :page \/ :max_page\nType key word or ID to remove bank from this list.",
+    "generate-meme-conversation.simple-comics-poster-meme.done": "Done.",
     "generate-meme-conversation.unknown-command": "Couldn't find that menu option, sorry.",
     "generate-meme-conversation.unsupported-meme": "Can't make such meme for now, choose another category.",
+    "generate-meme-conversation.when-meme.done": "Done.",
     "generate-meme.edit-bank-list": "✏ ️Edit used data-packs",
     "generate-meme.execute": "😃 Generate new meme",
     "generate-meme.hint": "Generating ':screenName' meme menu:",
+    "generate-meme.no-words-found": "No words found in selected data-packs: I don't have any text data to generate new meme.",
     "generate-meme.regexp.when-word": "When",
     "greetings": "He-hey, howdy! Nice to meet you.",
     "language.hint": "Select language:",
