--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -5,6 +5,9 @@
     "admin-menu.manage-banks": "📝 Редактировать банки",
     "bank-list.create-new-bank": "Создать новый банк",
     "bank-list.empty-hint": "⚠️ Список пуст",
+    "bank-list.hint": "Банки (дата-паки):\n🔸 Страница: :page \/ :max_page\nДля поиска банка введите ключевое слово или ID.",
+    "bank-list.not-found": "Банк не найден.",
+    "bank-list.selected-conversation": "Найден\/выбран банк #:id (:TITLE).",
     "chain.generic-word": "generic",
     "chaining-bank.edit-chains": "Редактировать цепочки пар",
     "chaining-bank.learn-from-text": "Обучиться тексту",
@@ -47,13 +50,20 @@
     "create-when-meme-conversation.step-3": "[Шаг 3\/3]\nВведи нижний текст мема.",
     "demotivational-poster-meme.title": "Демотиватор",
     "form.sending-error": "⚠️ Ошибка отправки формы: некоторые поля заполнены некорректно.\n\nДетали:\n:details",
+    "generate-meme-conversation.add-bank": "Добавить дата-пак",
     "generate-meme-conversation.ask-meme-type": "Выбери мем, который будет сгенерирован:",
+    "generate-meme-conversation.confirm-removal": "Убрать из списка ':title'?",
+    "generate-meme-conversation.demotivational-poster-meme.done": "Готово.",
     "generate-meme-conversation.generating-error": "Ошибка генерации мема.",
+    "generate-meme-conversation.selecting-banks": "Банки картинок и текста для генерируемых мемов:\n🔸 Страница: :page \/ :max_page\nДля удаления банка из этого списка введите ключевое слово или ID.",
+    "generate-meme-conversation.simple-comics-poster-meme.done": "Готово.",
     "generate-meme-conversation.unknown-command": "Такого пункта меню я не знаю.",
     "generate-meme-conversation.unsupported-meme": "На текущий момент такие мемы я не умею генерировать, выберите другую категорию.",
+    "generate-meme-conversation.when-meme.done": "Готово.",
     "generate-meme.edit-bank-list": "✏️ Изменить список дата-паков",
     "generate-meme.execute": "😃 Сгенерировать новый мем",
     "generate-meme.hint": "Меню генерации мема ':screenName':",
+    "generate-meme.no-words-found": "В выбранных банках (дата-паках) отсутствуют слова: у меня нет текста для картинок.",
     "generate-meme.regexp.when-word": "Когда",
     "greetings": "Хе-хей, привет! Рад, что мне написали.",
     "language.hint": "Выбери язык:",
